fix: z-index issue (#734)

--- a/front/src/pages/WritePost/WritePost.scss
+++ b/front/src/pages/WritePost/WritePost.scss
@@ -10,6 +10,8 @@
   }
 
   .writing-section {
+    z-index: 2;
+
     .input-container.borderless {
       padding-left: 0;
     }
@@ -20,6 +22,7 @@
 
       .subtitle1 {
         display: inline-block;
+        z-index: 2;
       }
 
       .category {
